# freegamespython

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/: Licence.txt
doc/: conf.py
docs/: Makefile  demo.py
src/freegames/: __init__.py  __main__.py  bagels.py  utils.py
